[package]
name = "pf_sandbox_website"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Kent <rubickent@gmail.com>"]

[dependencies]
dirs = "2"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
git2 = { version = "0.8", features = ["vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
